# kaer-morhen-system

./: .gitignore  README.md  devbox.json  docker-compose.yml  pyproject.toml
services/bestiary-service/: dockerfile  main.py  manage.py  pyproject.toml
services/bestiary-service/bestiary/: admin.py  models.py  serializers.py  urls.py  views.py
services/bestiary-service/bestiary/migrations/: 0001_initial.py  0002_remove_monster_weakness_monster_created_at_and_more.py
services/bestiary-service/bestiary_config/: asgi.py  settings.py  urls.py  wsgi.py
services/bestiary-service/core/: settings.py
services/quest-service/: dockerfile  main.py  manage.py  pyproject.toml
services/quest-service/quest_config/: asgi.py  settings.py  urls.py  wsgi.py
services/quest-service/quests/: models.py
services/quest-service/quests/migrations/: 0001_initial.py
