# kaer-morhen-system/pyproject.toml: Defines where the services are (the "Members")
# kaer-morhen-system/uv.lock: Defines the exact version of everything in the whole system

[project]
name = "kaer-morhen-system"
version = "0.1.0"
description = "Witcher Beast Tracking Microservices"
readme = "README.md"
requires-python = ">=3.12"

#These are the dependencies/tools to use across the entire project
dependencies = []

[tool.uv]
workspace = { members = ["services/*"] }