# services/bestiary-service/pyproject.toml: Defines what the service needs (e.g., "I need Django")

[project]
name = "bestiary-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "httpx>=0.28.1",
]
